# proactive-ai

./: .gitignore  IMPLEMENTATION_PLAN.md  MATH_BREAKDOWN.md  README.md  TRL_CODE_BREAKDOWN.md  VAPOR.md  VAPOR_IMPLEMENTATION_PLAN.md  categories.yaml  convert_fsdp_to_safetensor.sh  dpo.py  eval.py  fsdp_config.yaml  hello.py  prompt.md  push_example.sh  push_to_hf.py  pyproject.toml  requirements.txt  train.py  train.sh  train_config.yaml  unsloth_train.py
src/: __init__.py  data_loader.py  reward_funcs.py  vapor_config.py  vapor_trainer.py
src/llm_eval/: client.py  server.py
src/synthetic/: response_gen.py
